# Car-management

./: CMakeLists.txt  README.md
data/: Database.csv
include/: BatteryManager.h  DashboardController.h  DataHandler.h  Display.h  DriveMode.h  SafetyManager.h  SpeedCalculator.h  VehicleConfig.h
src/: BatteryManager.cpp  DashboardController.cpp  DataHandle.cpp  Display.cpp  DriveMode.cpp  SafetyManager.cpp  SpeedCalculator.cpp  VehicleConfig.cpp  main.cpp
